<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/importNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbadd_tv_name" />

    <EditText
        android:id="@+id/importNameEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/sbadd_te_name_hint"
        android:autofillHints="none"
        android:inputType=""
        android:maxLength="15"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/importDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbadd_tv_description" />

    <EditText
        android:id="@+id/importDescEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:autofillHints="none"
        android:hint="@string/sbadd_te_description_hint"
        android:inputType=""
        android:maxLength="30"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonImportSongbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbadd_button_importsongbook"
        android:textAppearance="@android:style/TextAppearance.Small" />

</LinearLayout>