<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/title_index_list"
        android:textAppearance="@android:style/TextAppearance.Large" >
    </TextView>

    <CheckBox
        android:id="@+id/checkBoxArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_by_artist"
        android:textAppearance="@android:style/TextAppearance.Medium" >
    </CheckBox>

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:drawSelectorOnTop="false"
        android:orientation="vertical" >
    </ListView>

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_data" />

</LinearLayout>